[gd_scene load_steps=4 format=3 uid="uid://dli0nb24kjbl7"]

[ext_resource type="PackedScene" uid="uid://b2ndbkv4et6g1" path="res://ui/overlays/base_overlay/base_overlay.tscn" id="1_f8xpv"]
[ext_resource type="Script" uid="uid://e66u3ar52g0m" path="res://ui/overlays/metrics_overlay/metrics_overlay.gd" id="2_dn83w"]
[ext_resource type="PackedScene" uid="uid://dl3nrnfccyg1s" path="res://ui/overlays/metrics_overlay/metric_display/metric_display.tscn" id="3_e57kx"]

[node name="MetricsOverlay" instance=ExtResource("1_f8xpv")]
script = ExtResource("2_dn83w")

[node name="MetricsLabel" type="Label" parent="PanelContainer/SectionsContainer/RootSection" index="0"]
layout_mode = 2
text = "PLAYER METRICS"
horizontal_alignment = 1

[node name="MetricsList" type="HFlowContainer" parent="PanelContainer/SectionsContainer/RootSection" index="1"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="MetricDisplay" parent="PanelContainer/SectionsContainer/RootSection/MetricsList" index="0" instance=ExtResource("3_e57kx")]
layout_mode = 2
